frontend/src/pages/AlertDetails/AlertHeader/ActionButtons/ActionButtons.styles.scss
.alert-action-buttons {
	display: flex;
	align-items: center;
	gap: 12px;
	color: var(--l1-border);
	.ant-divider-vertical {
		height: 16px;
		border-color: var(--l1-border);
		margin: 0;
	}
	.dropdown-icon {
		margin-right: 4px;
	}
}
.dropdown-menu {
	border-radius: 4px;
	box-shadow: none;
	background: linear-gradient(
		138.7deg,
		color-mix(in srgb, var(--card) 80%, transparent) 0%,
		color-mix(in srgb, var(--card) 90%, transparent) 98.68%
	);

	.dropdown-divider {
		margin: 0;
	}

	.delete-button {
		border: none;
		display: flex;
		align-items: center;
		width: 100%;

		&,
		& span {
			&:hover {
				background: var(--l1-border);
				color: var(--bg-cherry-400);
			}
			color: var(--bg-cherry-400);
			font-size: 14px;
		}
	}
}

